# CORE-COLD-Cyber-Optimized-Resilient-Engine---Cybernetic-Operational-Logic-Defense-V2

./: CORE-COLD-V2  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docker.compose.yml  gitignore  main.go  package.json  server.js
auditor/: auditor.rs
brain/: analyzer.py
bridge/: bridge.go
logic/: server.js
npm install/: server.json
src/: ciber-sentinel  monitor
src/auditor/: Cargo.toml  main.rs
src/brain/: analyzer. py  requirements.txt
src/bridge/: main.go
src/gatekeeper/: gatekeeper.cpp
src/logic/: docker-compose.yml  server.js
src/vault/: dockerfile
